--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "dpr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "locale",
@@ -68,35 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562963472651",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
-    },
-    {
-        "key": "xs",
-        "value": "39%3AJMZ69UpxJXEswQ%3A2%3A1722137863%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101030008%3BT%3A28702297",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "wl_cbv",
@@ -104,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
         "key": "wd",
@@ -113,16 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     },
     {
-        "key": "fr",
-        "value": "1SsMQJJKgoY8VbFAG.AWVMr27--2DgWfagVPV5Jg8dIuI.Bmpbzo..AAA.0.0.Bmpb-j.AWXNYGf-2qc",
+        "key": "c_user",
+        "value": "61562963472651",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T03:49:05.710Z",
-        "lastAccessed": "2024-07-28T03:49:05.710Z"
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
+    },
+    {
+        "key": "xs",
+        "value": "24%3AwLiSep1LLbrcbQ%3A2%3A1722149459%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
+    },
+    {
+        "key": "fr",
+        "value": "1SsMQJJKgoY8VbFAG.AWX_ZnXBYzIxbCxqQW21mFoyCzk.Bmpbzo..AAA.0.0.BmpepV.AWVPSfOaKdE",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T06:51:13.799Z",
+        "lastAccessed": "2024-07-28T06:51:13.799Z"
     }
 ]
