--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,21 @@
 [
     {
-        "key": "datr",
-        "value": "D-CkZqAj0whM4hvFfThBvvGR",
+        "key": "dbln",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%7D",
         "domain": "facebook.com",
-        "path": "/",
+        "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
         "key": "sb",
-        "value": "D-CkZiTNV30xnjpt74kuTTq1",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
         "key": "ps_n",
@@ -50,79 +23,97 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
         "key": "dpr",
-        "value": "1.6497068405151367",
+        "value": "2.7737884521484375",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.430Z",
-        "lastAccessed": "2024-07-28T11:46:31.430Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
-        "key": "wd",
-        "value": "720x1329",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562963472651",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
-    },
-    {
-        "key": "fr",
-        "value": "0VT4cNEeIMa3efVz6.AWW3JKEbLVRXsg-YowFHxbJruUk.BmpOAP..AAA.0.0.Bmpi96.AWWcRa3vlpU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
-    },
-    {
-        "key": "xs",
-        "value": "29%3AjQy8cnKV3DnQPw%3A2%3A1722167163%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101237835%3BT%3A28702786",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2574%3Btimestamp%3A1722167165",
+        "value": "v2%3Bclient_version%3A2574%3Btimestamp%3A1722137865",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-07-28T11:46:31.431Z",
-        "lastAccessed": "2024-07-28T11:46:31.431Z"
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "datr",
+        "value": "mEOmZgmR2pcYwrcAuRx6jmv6",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "wd",
+        "value": "1060x2084",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100090419983169",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "xs",
+        "value": "38%3A5pvsEkDH1p5Mhw%3A2%3A1722172377%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
+    },
+    {
+        "key": "fr",
+        "value": "1aCODphjefvQpgaIu.AWXSnbc1-jC99OX9EvM1EN9xzDw.Bmpezj..AAA.0.0.BmpkPc.AWXAtgv9VDw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-07-28T13:13:14.011Z",
+        "lastAccessed": "2024-07-28T13:13:14.011Z"
     }
 ]
