--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.994Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "wl_cbv",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "datr",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
-    },
-    {
-        "key": "wd",
-        "value": "1060x2084",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "c_user",
@@ -95,34 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
-    },
-    {
-        "key": "fr",
-        "value": "1M1alu3KXoCAiInng.AWVzCfNq_I2JsEDxwF3T1ogI40o.BmrCgh..AAA.0.0.BmrCgh.AWW3G-gFLvE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "xs",
-        "value": "12%3ANejznkEJAlLJQQ%3A2%3A1722242472%3A-1%3A5903%3A%3AAcVrCb3CdrGcVVxupOLygN7xcEnfhflwZHC6KAHc_Q",
+        "value": "12%3ANejznkEJAlLJQQ%3A2%3A1722242472%3A-1%3A5903%3A%3AAcUttm69P6aymL8BjR51yKDuvld3LtMNkiQ6LCM38Q",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
+    },
+    {
+        "key": "wd",
+        "value": "1060x2084",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
+    },
+    {
+        "key": "fr",
+        "value": "1vzyQtHP0RJ2f01O6.AWXtWfYVFH7q_lFOUWFAJaKSbfs.BmrFtM..AAA.0.0.BmrFuU.AWXDA016Y2A",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722558504131%2C%22v%22%3A1%7D",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722571675094%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-02T00:29:14.995Z",
-        "lastAccessed": "2024-08-02T00:29:14.995Z"
+        "creation": "2024-08-02T04:08:09.851Z",
+        "lastAccessed": "2024-08-02T04:08:09.851Z"
     }
 ]
