--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.454Z",
-        "lastAccessed": "2024-08-03T07:59:31.454Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.454Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "dpr",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "datr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "locale",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
-    },
-    {
-        "key": "wd",
-        "value": "1060x2084",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "c_user",
@@ -95,25 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "xs",
-        "value": "31%3AUnTBlmrtybx53Q%3A2%3A1722648386%3A-1%3A5903%3A%3AAcVPPxv49C_q3c5pHgYMjv886LxHPTWDCcBH2FFTcQ",
+        "value": "38%3AHSzk9kGAigFmGA%3A2%3A1722691660%3A-1%3A5903",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     },
     {
         "key": "fr",
-        "value": "1FoIJt6b5QppWzsMI.AWVu5XPrprnZhvgojLahZboQO-o.BmrbK4..AAA.0.0.BmreNY.AWWHi6iNtkU",
+        "value": "1FoIJt6b5QppWzsMI.AWVkcymtqFJmy8E5xzYW-J6roC0.BmrbK4..AAA.0.0.BmrjBO.AWUv_zyQbZI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-03T07:59:31.455Z",
-        "lastAccessed": "2024-08-03T07:59:31.455Z"
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
+    },
+    {
+        "key": "wd",
+        "value": "1060x2084",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1722691671899%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-03T13:28:09.640Z",
+        "lastAccessed": "2024-08-03T13:28:09.640Z"
     }
 ]
